add migration and strip pattern saga